# paint-type

./: .envrc  .gitignore  .hypatia-ignore  .relicense.ps1  .tool-versions  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  AUDIT.adoc  BADGE-BOARD.adoc  CHANGELOG.md  CONTAINER-GUIDE.adoc  CONTRIBUTING.md  Containerfile  DEPENDENCY-SCHEDULER.adoc  EXPLAINME.adoc  Justfile  LICENCE-AUDIT.adoc  LICENSE  LICENSE-STATUS.adoc  PROOF-NEEDS.adoc  PROOF-NEEDS.md  PROOF-STATUS.adoc  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.adoc  READINESS.md  README.adoc  ROADMAP.adoc  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  TOPOLOGY.adoc  TOPOLOGY.md  build.zig  composite_demo.ppm  flake.nix  guix.scm  llm-warmup-dev.adoc  llm-warmup-dev.md  (+6 more)
.devcontainer/: 0.1-AI-MANIFEST.a2ml  Containerfile  README.adoc  devcontainer.json
.github/: 0.1-AI-MANIFEST.a2ml  ABOUT.adoc  CI-CD-CLEANUP-SUMMARY.adoc  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.adoc  GOVERNANCE.md  MAINTAINERS  copilot-instructions.adoc  copilot-instructions.md  dependabot.yml  settings.yml
src/ephapax/: Cargo.toml  build.rs
src/ephapax/src/: composite.rs  lib.rs
src/ephapax/tests/: e2e_pipeline.rs
src/host/: 0.2-AI-MANIFEST.a2ml  Cargo.toml  README.adoc
src/host/src/: 0.3-AI-MANIFEST.a2ml  README.adoc  main.rs
src/host_core/: 0.2-AI-MANIFEST.a2ml  Cargo.toml  README.adoc
src/host_core/src/: 0.3-AI-MANIFEST.a2ml  README.adoc  codec.rs  dispatch.rs  document.rs  lib.rs  protocol.rs
src/host_core/tests/: 0.3-AI-MANIFEST.a2ml  README.adoc  headless_save.rs
(+421 files in other folders)
