# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "host"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"

[[bin]]
name = "paint-type"
path = "src/main.rs"

[dependencies]
host_core = { path = "../host_core" }
gossamer-rs = { path = "../../third_party/gossamer/bindings/rust" }
serde_json = "1"
