# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "host_core"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"

[lib]
path = "src/lib.rs"

[dependencies]
paint_core = { path = "../paint_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
png = "0.17"
